syntax = "proto3";

package main;
option go_package = "./main";

service CRUD {
    rpc GetUsers (GetUsersRequest) returns (GetUsersResponse) {}
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
    rpc PutUser (PutUserRequest) returns (PutUserResponse) {}
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {}
    rpc ViewCount (ViewCountRequest) returns (ViewCountResponse) {}
}

message User {
    int64 id = 1;
    string account = 2;
    string email = 3;
    string password = 4;
}

message GetUsersRequest {

}

message GetUsersResponse {
    repeated User users = 1;
}

message CreateUserRequest {
    User user = 1;
}

message CreateUserResponse {
    int64 id = 1;
}

message PutUserRequest {
    int64 id = 1;
}

message PutUserResponse {
    int64 id = 1;
}

message DeleteUserRequest {
    int64 id = 1;
}

message DeleteUserResponse {
    int64 id = 1;
}

message ViewCountRequest {

}

message ViewCountResponse {
    int64 count = 1;
}
